test/ci/back-end/fail/new_stmt_validity_check.rav
module Agree_Int = Library.Agree[Library.IntType]

field f: Agree_Int

proc p() {
    var l: Ref;
    l := new(f: Agree_Int.agree_top);
}